TCP Echo server and client

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,6 +12,8 @@ VPATH := ../src/
 
 
 SOURCE := tcp_client.c
+SOURCE += tcp_echo_client.c
+SOURCE += tcp_echo_server.c
 SOURCE += tcp_server.c
 SOURCE += udp_client.c
 SOURCE += udp_server.c
