--- a/src/Makefile
+++ b/src/Makefile
@@ -16,6 +16,7 @@ SOURCE += tcp_echo_client.c
 SOURCE += tcp_echo_server.c
 SOURCE += tcp_server.c
 SOURCE += udp_echo_client.c
+SOURCE += udp_echo_client_timeout.c
 SOURCE += udp_echo_server.c
 SOURCE += udp_echo_server_sigio.c
 SOURCE += udp_client.c
