TCP echo server with threads

--- a/src/Makefile
+++ b/src/Makefile
@@ -20,6 +20,7 @@ SOURCE += udp_echo_client_timeout.c
 SOURCE += udp_echo_server.c
 SOURCE += tcp_echo_server_fork.c
 SOURCE += udp_echo_server_sigio.c
+SOURCE += tcp_echo_server_thread.c
 SOURCE += udp_client.c
 SOURCE += udp_server.c
 
@@ -30,7 +31,7 @@ BINOUT := $(SOURCE:.c=.x)
 all : $(BINOUT)
 	
 %.x : %.c
-	$(CC) -o $@ $<
+	$(CC) -o $@ $< -lpthread
 
 
 clean :
